fix overflow description bug on hover

--- a/scss/components/_gamesGrid.scss
+++ b/scss/components/_gamesGrid.scss
@@ -27,6 +27,7 @@
   transition: 0.2s all;
   height: 19rem;
   position: relative;
+  overflow: hidden;
 
   &:hover {
     box-shadow: $box-shadow-medium;
@@ -57,7 +58,7 @@
   display: grid;
   place-items: center;
   color: $color-main-white;
-  padding: 1rem;
+  padding: 0.5rem;
   font-size: 1.6rem;
   text-align: center;
   line-height: 1.5;
